3.nginx_routing/1.loadbalancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: seulki
spec:
  replicas: 2 
  selector: 
    matchLabels:
        app: my-nginx
  template: # template : pod 정의
    metadata:
      labels: 
        app: my-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports: 
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: seulki
spec: 
  type: LoadBalancer
  ports: 
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: my-nginx # Pod의 labels.app은 service의 selector.app의 이름과 싱크가 맞아야한다.
